--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
     width: 95vw;
     max-width: 1300px;
     margin: auto;
+    display: flex;
+    align-items: center;
   }
 
   /* canvas bars styling */
@@ -13,6 +15,8 @@ body {
   canvas {
     /* border: 1px solid; */
     margin: 150px auto 50px;
+    padding: 100px auto;
+
   }
 
   /* button controllers styling */
@@ -20,6 +24,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    align-items: center;
   }
 
   #sound,
